# gazebo_ros_battery

./: CMakeLists.txt  README.md  package.xml
examples/: battery_demo.world
include/gazebo_ros_battery/: battery_consumer_base.hh
src/: ROS_debugging.h  battery_consumer.cpp  battery_consumer.hh  battery_consumer_base.cpp  battery_discharge.cpp  battery_discharge.hh  cmd_vel_consumer.cpp  cmd_vel_consumer.hh  mechanical_energy_consumer.cpp  mechanical_energy_consumer.hh  motor_consumer.cpp  motor_consumer.hh
srv/: SetCharge.srv  SetCharging.srv  SetChargingRate.srv  SetCoef.srv  SetLoad.srv
test/launch/: cp1-base-test.launch
test/worlds/: battery_demo.world  p2-cp1.world
