<?xml version="1.0"?>
<package format="3">
  <name>gazebo_ros_linear_battery</name>
  <version>1.0.0</version>
  <description>The plugin for battery discharge/charge</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <author>Martin Pecka</author>
  <author>pjamshidi</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>
</package>
