<?xml version="1.0"?>
<!--
SPDX-License-Identifier: MIT
SPDX-FileCopyrightText: pooyanjamshidi, marioney, tmxkn1
SPDX-FileCopyrightText: Czech Technical University in Prague

Original file from https://github.com/tmxkn1/brass_gazebo_battery edited by Martin Pecka:
- renamed to gazebo_ros_battery
- cleaned up the code
-->
<package format="3">
  <name>gazebo_ros_battery</name>
  <version>1.0.0</version>
  <description>The plugin for battery discharge/charge</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <author>Martin Pecka</author>
  <author>pjamshidi</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>roscpp</depend>

  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>
</package>
